--- a/flightreservation/src/main/resources/application.properties
+++ b/flightreservation/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 
+spring.datasource.url=jdbc:mysql://cloudaws.czpeoxad2op8.us-east-1.rds.amazonaws.com/RESERVATION?useSSL=false
+spring.datasource.username=aws
+spring.datasource.password=password
+
+spring.jpa.show-sql=true
+
+spring.mvc.view.prefix=/WEB-INF/jsps/
+spring.mvc.view.suffix=.jsp
+
+server.servlet.context-path=/flightreservation
